some upgrades